@@ -311,6 +311,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6131: test_modulefinder leaked when run after test_distutils.
+  Patch by Hirokazu Yamamoto.
+
 - Issue #6048: Now Distutils uses the tarfile module in archive_util.
 
 - Issue #5150: IDLE's format menu now has an option to strip trailing
